Fix drop-down menus on mobile devices

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -374,3 +374,6 @@ input, select {
   border: 1px solid #999;
   padding: 15px;
 }
+.dropdown-backdrop{
+    position: static;
+}
